--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,5 @@
      [ngStyle]="{backgroundColor:logItem >=5 ? 'blue' : 'cyan'}"
      [ngClass]="{'white-text':logItem >=5}"
      >{{logItem}}</div>
+     <p> This Bulit it attribute directive concept</p>
 
